# library-mgmt-system

./: Procfile  README.md  db.sqlite3  log.html  output.xml  pyproject.toml  report.html  requirements.txt  test_markdown.py
Robot/: LoginRegistrationTest.robot  MainLoginRegistration.robot
Robot/results/: log.html  output.xml  report.html
TechVidvanLibrary/: settings.py
home/: urls.py  views.py
home/migrations/: 0001_initial.py  0005_alter_addstudent_user.py
results/: log.html  output.xml  report.html
templates/: base.html  dashboard.html  index.html  project_plan.html
